force-app/main/default/objects/Department_Head__c/Department_Head__c.object-meta.xml
<CustomObject>
    <label>Department Head</label>
    <nameField>
        <displayFormat>DH-{000000}</displayFormat>
        <label>Department Head Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Department Heads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>