force-app/main/default/objects/Department_Head__c/fields/Delegated_To__c.field-meta.xml
<CustomField>
    <fullName>Delegated_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegated To</label>
    <referenceTo>Department_Head__c</referenceTo>
    <relationshipLabel>Delegated By</relationshipLabel>
    <relationshipName>Delegated_By</relationshipName>
    <type>Lookup</type>
</CustomField>