force-app/main/default/objects/Department_Head__c/fields/Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Disclosure__c</fullName>
    <label>Disclosure</label>
    <referenceTo>Disclosure__c</referenceTo>
    <relationshipLabel>Department Heads</relationshipLabel>
    <relationshipName>Department_Heads</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>