force-app/main/default/objects/Department_Head__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <formula>Contact__r.PersonContact.Institution__c</formula>
    <label>Institution</label>
    <type>Text</type>
</CustomField>