force-app/main/default/objects/Department_Head__c/fields/TLO_Contact__c.field-meta.xml
<CustomField>
    <fullName>TLO_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TLO Contact (Old)</label>
    <referenceTo>TLO_Contact__c</referenceTo>
    <relationshipLabel>Department Heads</relationshipLabel>
    <relationshipName>Department_Heads</relationshipName>
    <type>Lookup</type>
</CustomField>